bitnami/shared/kyverno/mount-kafka-cert-volume.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: mount-msk-kafka-certificate-volume
  annotations:
    policies.kyverno.io/title: Add MSK Certificates as a Volume
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Deployment,Volume
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments", "statefulsets"]

  matchConditions:
    - name: match-msk-annotation
      expression: >
        has(object.metadata.annotations) && 
        'uw.systems/msk-kafka-client' in object.metadata.annotations

  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: |
          Object{
            spec: Object.spec{
              template: Object.spec.template{
                spec: Object.spec.template.spec{
                  volumes: [
                    Object.spec.template.spec.volumes{
                      name: "kafka-client-cert",
                      secret: Object.spec.template.spec.volumes.secret{
                        secretName: object.metadata.name + "-gen-msk-kafka-cert"
                      }
                    }
                  ],
                  containers: object.spec.template.spec.containers.map(c, 
                    Object.spec.template.spec.containers{
                      name: c.name,
                      volumeMounts: [
                        Object.spec.template.spec.containers.volumeMounts{
                          name: "kafka-client-cert",
                          mountPath: "/certs",
                          readOnly: true
                        }
                      ]
                    }
                  )
                }
              }
            }
          }
---
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: mount-uw-hosted-kafka-certificate-volume
  annotations:
    policies.kyverno.io/title: Add UW Hosted Certificates as a Volume
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Deployment,Volume
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments", "statefulsets"]
  # Check for the UW Hosted annotation
  matchConditions:
    - name: match-uw-hosted-annotation
      expression: >
        has(object.metadata.annotations) && 
        'uw.systems/uw-hosted-kafka-client' in object.metadata.annotations

  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: |
          Object{
            spec: Object.spec{
              template: Object.spec.template{
                spec: Object.spec.template.spec{
                  volumes: [
                    Object.spec.template.spec.volumes{
                      name: "kafka-client-cert",
                      secret: Object.spec.template.spec.volumes.secret{
                        secretName: object.metadata.name + "-gen-uw-kafka-cert"
                      }
                    }
                  ],
                  containers: object.spec.template.spec.containers.map(c, 
                    Object.spec.template.spec.containers{
                      name: c.name,
                      volumeMounts: [
                        Object.spec.template.spec.containers.volumeMounts{
                          name: "kafka-client-cert",
                          mountPath: "/certs",
                          readOnly: true
                        }
                      ]
                    }
                  )
                }
              }
            }
          }
